2000-06-11  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSFont.h:
	* Headers/gnustep/gui/GSFontInfo.h:
	* Source/NSFont.m:
	* Source/GSFontInfo.m:
	Added some support for glyph layout
	* Source/NSText.m:
	updateFontPanel isMultiple was set wrong
	
2000-06-10  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSDocument.h:
	* Headers/gnustep/gui/NSDocumentController.h:
	* Headers/gnustep/gui/NSDocumentFrameworkPrivate.h:
	Added header, replaced import with include
	* Source/NSDocument.m:
	Added header, replaced import, retain, release...
	Rewrote the saveXX methods
	Rename saveFileType to fileTypeFromLastRunSavePanel
	* Source/NSDocumentController.m:
	Added header, replaced import, retain, release...
	Added methods for handling of last recent documents.
	Made addDocument and removeDocument public.
	* Source/NSAttributedString.m:
	Added header.
	RTFHeaderStringWithContext: convert colour to RGB
	
2000-06-07  Adam Fedor  <fedor@gnu.org>

	* Model/IMLoading.m ([GMModel -_makeConnections]): Call awakeFromNib
	if object doesn't respond to awakeFromModel (patch from 
	Gregory Casamento <borgheron@yahoo.com>).

2000-05-04 Georg Fleischmann

	* gui/Model/GMAppKit.m ([NSWindow -createObjectForModelUnarchiver:]):
	use self instead of NSWindow class
	to allow creation of subclasses of NSWindow

2000-06-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: ([-setAlignment:range:]) retain/release
	problem fixed.

Thu Jun  1 21:50:34 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSScrollView.m ([NSScrollView -tile]): Fixed position of
	corner view when there is no horizontal scrollview; fixed position
	of parts when there is a header view but not a horizontal
	scrollview.
	
2000-05-24 Georg Fleischmann <georg@vhf.de>

	* gui/Model/GMAppKit.m
	([NSScrollView(GMArchiverMethods) -initWithModelUnarchiver:]):
	select selected cells in matrix too

2000-05-20  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSTextView.h: