@@ -1,3 +1,9 @@
+2000-06-11  Jonathan Gapen  <jagapen@home.com>
+
+	* Headers/gnustep/gui/NSTypesetter.h: New file.
+	* Source/NSTypesetter.m: Skeleton implementation from Apple docs.
+	* Source/NSSimpleHorizontalTypesetter.m: As above.
+
 2000-06-11  Fred Kiefer  <FredKiefer@gmx.de>
 
 	* Headers/gnustep/gui/NSFont.h:
